# 3D-Satellite-Collision-Detection-System

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  run.sh  run_sim.sh
assets/config/: satellites.json
shaders/: basic.frag  debris.frag  debris.vert  earth.frag  earth.vert  orbit.frag  orbit.vert  satellite.frag  satellite.vert  warning.frag  warning.vert
src/app/: main.cpp
src/render/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Shader.cpp  Shader.h
src/scene/: CollisionWarning.cpp  CollisionWarning.h  DebrisSystem.cpp  DebrisSystem.h  Earth.cpp  Earth.h  Satellite.h  SatelliteSystem.cpp  SatelliteSystem.h
src/sim/: CollisionDetect.cpp  CollisionDetect.h  ConjunctionVisualizer.cpp  ConjunctionVisualizer.h  OrbitPropagator.cpp  OrbitPropagator.h
src/sim/conjunctions/: ConjunctionAnalyzer.cpp  ConjunctionAnalyzer.h
src/ui/: GuiManager.cpp  GuiManager.h
src/util/: ConfigLoader.cpp  ConfigLoader.h  TextureLoader.cpp  TextureLoader.h
